2.1.1:
- Send datetimes in ISO8601 variant that PuppetDB can handle. (#81)

2.1.0:
- Add extract operations to only fetch necessary fields

2.0.3:
- Fixed return format in query_facts function (#71)
- Added unit tests for functions
- Handle HTTP URLs
- Don't subquery the resource specification in query_resources (#73)

2.0.2:
- Fixed invalid method call in query_facts (thanks ayohrling)
- Allow empty facts list in fact query face (thanks ayohrling)

2.0.1:
- Fix >= and <= operators

2.0.0:
- switch to use v4 API
- add support for structured facts
- add syntactic sugar for date queries (@ sign in front of string)
- add arbitrary subquery support (# sign)

1.6.1:
- add require statements needed in some puppet versions to avoid loaderror

1.6.0:
- Update events face to use v3 API instead of experimental
- Print error if chronic dependency can't be loaded

1.5.3:
- Fixed memory leak with ruby LOAD_PATH

1.5.2:
- Module update to avoid forge checksum error

1.5.1:
- Style fixes
- Update to metadata.json for module metadata

1.5.0:
- Update default API version to v3
- Add resource query function from rlpowell
- README fixes
- Update rexical dependency to 1.0.5 and regenerated lexer

1.4.0:
- Support for regexp matching resource titles, like:
   File[~titleregexp]
- More tests
- Only require JSON gem when actually needed
- Allow empty queries (returns all hosts)
- Don't require pluginsync to run on master
- Fix strftime call on old ruby versions
- Improve facts query output
- Support single quoted strings in queries as well as double quoted