@@ -15,6 +15,7 @@ Puppet::Parser::Functions.newfunction(:query_facts, :type => :rvalue, :arity => 
 EOT
                                      ) do |args|
   query, facts = args
+  facts_for_query = facts.map { |fact| fact.is_a?(Array) ? fact.first : fact }
 
   require 'puppet/util/puppetdb'
 
@@ -31,6 +32,6 @@ EOT
   uri = URI(Puppet::Util::Puppetdb.config.server_urls.first)
   puppetdb = PuppetDB::Connection.new(uri.host, uri.port, uri.scheme == 'https')
   parser = PuppetDB::Parser.new
-  query = parser.facts_query query, facts if query.is_a? String
-  parser.facts_hash(puppetdb.query(:facts, query, :extract => [:certname, :name, :value]))
+  query = parser.facts_query query, facts_for_query if query.is_a? String
+  parser.facts_hash(puppetdb.query(:facts, query, :extract => [:certname, :name, :value]), facts)
 end
