@@ -33,16 +33,55 @@ module PuppetDB::ParserHelper
 
   # Turn an array of facts into a hash of nodes containing facts
   #
-  # @param facts [Array] fact values
+  # @param fact_hash [Array] fact values
+  # @param facts [Array] fact names
   # @return [Hash] nodes as keys containing a hash of facts as value
-  def facts_hash(facts)
-    facts.reduce({}) do |ret, fact|
+  def facts_hash(fact_hash, facts)
+    fact_hash.reduce({}) do |ret, fact|
+      # Array#include? only matches on values of the same type, so if we find
+      # a matching string, it's not a nested query.
+      name, value = if facts.include?(fact['name'])
+                [fact['name'], fact['value']]
+              else
+                # Find the set of keys where the first value is the fact name
+                nested_keys = facts.select do |x|
+                  x.is_a?(Array) && x.first == fact['name']
+                end.flatten
+
+                # Join all the key names together with an underscore to give
+                # us a unique name, and then send all the keys but the fact
+                # name (which was already queried out) to extract_nested_fact
+                [
+                  nested_keys.join("_"),
+                  extract_nested_fact([fact], nested_keys[1..-1]).first
+                ]
+              end
+
       if ret.include? fact['certname']
-        ret[fact['certname']][fact['name']] = fact['value']
+        ret[fact['certname']][name] = value
       else
-        ret[fact['certname']] = { fact['name'] => fact['value'] }
+        ret[fact['certname']] = { name => value }
       end
       ret
+    end
+  end
+
+  # Take an array of hashes of fact hashes and get a nested value from each
+  # of them.
+  #
+  # @param fact_hashes [Array] an array of hashes of fact hashes
+  # @param keys [Array] an array of keys to dig into the hash
+  # @returt [Array] an array of extracted values
+  def extract_nested_fact(fact_hashes, keys)
+    fact_hashes.map do |fact_hash|
+      hash = fact_hash['value']
+
+      # Traverse the hash, setting `hash` equal to the next level deep each step
+      keys.each do |key|
+        hash = hash[key]
+      end
+
+      hash
     end
   end
 
