@@ -1,6 +1,7 @@
 #! /usr/bin/env ruby -S rspec
 
 require 'spec_helper'
+require 'puppetdb/connection'
 
 describe 'query_nodes' do
   context 'without fact parameter' do
@@ -18,6 +19,31 @@ describe 'query_nodes' do
         .with(:facts, ['and', ['in', 'certname', ['extract', 'certname', ['select_fact_contents', ['and', ['=', 'path', ['hostname']], ['=', 'value', 'apache4']]]]], ['or', ['=', 'name', 'ipaddress']]], :extract => :value)
         .returns [ { 'value' => '172.31.6.80' } ]
       should run.with_params('hostname="apache4"', 'ipaddress').and_return(['172.31.6.80'])
+    end
+  end
+
+  context 'with a nested facter paramter' do
+    it do
+      PuppetDB::Connection.any_instance.expects(:query)
+        .with(:facts, ['and', ['in', 'certname', ['extract', 'certname', ['select_fact_contents', ['and', ['=', 'path', ['hostname']], ['=', 'value', 'apache4']]]]], ['or', ['=', 'name', 'networking']]], :extract => :value)
+        .returns [
+          {
+            'value' => {
+              'interfaces' => {
+                'eth0' => {
+                  'ip' => '172.31.6.80',
+                  'network' => '172.31.0.0',
+                },
+                'eth1' => {
+                  'ip' => '172.32.6.80',
+                  'network' => '172.32.0.0',
+                },
+                'bond0' => {},
+              }
+            }
+          }
+        ]
+      should run.with_params('hostname="apache4"', ['networking', 'interfaces', 'eth1', 'ip']).and_return(['172.32.6.80'])
     end
   end
 end
